Use java 17 in verification pipeline

--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -16,11 +16,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 17
+      - name: Set up JDK 20
         uses: actions/setup-java@v3
         with:
-          distribution: 'zulu'
-          java-version: 17
+          distribution: 'openjdk'
+          java-version: 20
       - name: Make gradlew executable
         run: chmod +x ./gradlew
       - name: Run unit tests
@@ -37,12 +37,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 17
+      - name: Set up JDK 20
         uses: actions/setup-java@v3
         with:
-          distribution: 'zulu'
-          java-version: 17
+          distribution: 'openjdk'
+          java-version: 20
       - name: Make gradlew executable
         run: chmod +x ./gradlew
-      - name: Run unit tests
+      - name: Run assemble to assemble project
         run: ./gradlew assemble
